project(client-test)

add_executable(client-test main.cpp)

set(_CAIRO_TARGET "")
set(_CAIRO_INCLUDE_HINTS "")

if(APPLE)
    set(_cairo_root "")
    set(_brew_prefixes "/opt/homebrew" "/usr/local")
    foreach(_prefix IN LISTS _brew_prefixes)
        if(NOT _cairo_root AND EXISTS "${_prefix}/opt/cairo")
            set(_cairo_root "${_prefix}/opt/cairo")
        endif()
    endforeach()

    if(_cairo_root AND EXISTS "${_cairo_root}/lib/libcairo.dylib")
        set(_CAIRO_TARGET "${_cairo_root}/lib/libcairo.dylib")
        if(EXISTS "${_cairo_root}/include")
            list(APPEND _CAIRO_INCLUDE_HINTS "${_cairo_root}/include")
        endif()
    endif()

    if(NOT _CAIRO_TARGET)
        message(FATAL_ERROR "Cairo not found in Homebrew. Install it with 'brew install cairo'.")
    endif()
else()
    find_package(Cairo REQUIRED)

    if(TARGET Cairo::Cairo)
        set(_CAIRO_TARGET Cairo::Cairo)
    elseif(DEFINED CAIRO_LIBRARIES)
        set(_CAIRO_TARGET ${CAIRO_LIBRARIES})
        if(DEFINED CAIRO_INCLUDE_DIRS)
            list(APPEND _CAIRO_INCLUDE_HINTS ${CAIRO_INCLUDE_DIRS})
        elseif(DEFINED CAIRO_INCLUDE_DIR)
            list(APPEND _CAIRO_INCLUDE_HINTS ${CAIRO_INCLUDE_DIR})
        endif()
    else()
        message(FATAL_ERROR "Cairo configuration did not provide libraries to link against.")
    endif()
endif()

if(NOT _CAIRO_TARGET)
    message(FATAL_ERROR "Cairo not found. Install Cairo or provide the library path explicitly.")
endif()

target_link_libraries(client-test revyv ${_CAIRO_TARGET})

if(_CAIRO_INCLUDE_HINTS)
    list(REMOVE_DUPLICATES _CAIRO_INCLUDE_HINTS)
    target_include_directories(client-test PRIVATE ${_CAIRO_INCLUDE_HINTS})
endif()

set_property(TARGET client-test PROPERTY CXX_STANDARD 17)
